[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-rca-env"
version = "0.1.0"
description = "Deterministic OpenEnv RL environment for incident root cause analysis"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Srujan Gowda" }
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.25.0",
    "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*", "graders*", "tasks*"]

[tool.setuptools]
include-package-data = true